# fs

./: README.md  pyproject.toml
fs_omar_arabi/: __main__.py
fs_omar_arabi/cli/: cli.py
fs_omar_arabi/fuzzy_search/: fuzzy_search.py
src/cli/: cli.py
src/fs_omar_arabi/: __main__.py
tests/: test_fuzzy_search.py
