[project]
name = "fs"
version = "0.1.0"
description = "a fuzzy search for files and diretories"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "pytest>=8.4.1",
]

maintainers = [
    {name = "Omar Arabi", email = "omarbuisness7@gmail.com"}
]

[project.scripts]
fs = "fs_omar_arabi.__main__:main"

[project.urls]
Repository = "https://github.com/Omar-Arabi1/fs"