[project]
name = "pff"
version = "1.0.0"
description = "a fuzzy search for files and diretories"
readme = "readme_for_pypi.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "colorama>=0.4.6",
    "pytest>=8.4.1",
]

maintainers = [
    {name = "Omar Arabi", email = "omarbuisness7@gmail.com"}
]

[project.scripts]
pff = "pff_omar_arabi.__main__:main"

[project.urls]
Repository = "https://github.com/Omar-Arabi1/fs"
